# Multiplayer-Flappy-Bird-Race

./: README.md  flappy-race-build-plan.md  flappy-race-context-prompt.md
app/client/: dune
app/client/src/: dune  game_loop.ml  game_loop.mli  net.ml  net.mli  view.ml  view.mli
app/client/static/: index.html
lib/game/src/: bird.ml  bird.mli  config.ml  config.mli  course.ml  course.mli  dune  item.ml  item.mli  world.ml  world.mli
lib/game/test/: dune  test_bird.ml  test_course.ml  test_powerups.ml  test_world.ml
lib/protocol/src/: dune  flappy_protocol.ml  flappy_protocol.mli
